--- a/PLASCAT/Base.lproj/Main.storyboard
+++ b/PLASCAT/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--PlassCat By Eitan Magen-->
@@ -17,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3WC-qP-S8V">
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3WC-qP-S8V">
                                 <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <subviews>
                                     <searchBar contentMode="redraw" misplaced="YES" text="" placeholder="Search Catalog By :" translatesAutoresizingMaskIntoConstraints="NO" id="UGA-0o-1Ut">
@@ -60,7 +61,7 @@
                                             </segmentedControl>
                                         </subviews>
                                     </stackView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4K7-Ad-Lmu">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4K7-Ad-Lmu">
                                         <rect key="frame" x="0.0" y="70" width="600" height="422"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="separatorColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -97,6 +98,11 @@
                         <barButtonItem key="leftBarButtonItem" title="Options" id="y13-zW-khX">
                             <connections>
                                 <segue destination="jiG-BA-hgE" kind="show" id="4cO-rb-rZv"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="History" id="LZX-26-u1P" userLabel="History">
+                            <connections>
+                                <segue destination="895-rN-oS7" kind="show" id="iSi-h6-821"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -282,7 +288,56 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eBT-0W-Pao" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716" y="1122"/>
+            <point key="canvasLocation" x="92" y="1122"/>
+        </scene>
+        <!--Searched History-->
+        <scene sceneID="uGq-eZ-C4X">
+            <objects>
+                <viewController id="895-rN-oS7" customClass="historyTableViewController" customModule="PLASCAT" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="F2J-gv-v64"/>
+                        <viewControllerLayoutGuide type="bottom" id="VxW-of-PHi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Zn8-h8-zAO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="12Y-mm-SqY">
+                                <rect key="frame" x="20" y="20" width="560" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HistoryCell" id="vuM-N2-Mlf">
+                                        <rect key="frame" x="0.0" y="92" width="560" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vuM-N2-Mlf" id="8UD-X2-Qo6">
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="895-rN-oS7" id="mkh-DS-0OQ"/>
+                                    <outlet property="delegate" destination="895-rN-oS7" id="bfj-LT-KPy"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VxW-of-PHi" firstAttribute="top" secondItem="12Y-mm-SqY" secondAttribute="bottom" id="EbO-d0-R5E"/>
+                            <constraint firstItem="12Y-mm-SqY" firstAttribute="top" secondItem="F2J-gv-v64" secondAttribute="bottom" id="Gf9-EA-L4Y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="12Y-mm-SqY" secondAttribute="trailing" id="Lmy-V8-Gy6"/>
+                            <constraint firstItem="12Y-mm-SqY" firstAttribute="leading" secondItem="Zn8-h8-zAO" secondAttribute="leadingMargin" id="QOR-hP-s6F"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Searched History" id="Nq4-Gs-Odx"/>
+                    <connections>
+                        <outlet property="tableView" destination="12Y-mm-SqY" id="f26-m4-WEO"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="segueToSearch" id="wWm-38-RgS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jhe-xf-KQM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="966" y="1122"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XBu-Xp-oeo">
@@ -308,4 +363,7 @@
         <image name="play1" width="354" height="353"/>
         <image name="stop1" width="354" height="352"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Tuh-I9-AQE"/>
+    </inferredMetricsTieBreakers>
 </document>
